<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="52dp"
        android:layout_marginRight="25dp"
        android:drawableEnd="@drawable/icon1"
        android:drawablePadding="20dp"
        android:onClick="goConexion"
        android:text="@string/conexion"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="173dp"
        android:drawableEnd="@drawable/icon5"
        android:drawablePadding="20dp"
        android:onClick="goReportes"
        android:text="@string/reporte"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="22dp"
        android:drawableEnd="@drawable/icon3"
        android:drawablePadding="20dp"
        android:onClick="goTipos"
        android:text="@string/tipos"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="25dp"
        android:drawableEnd="@drawable/icon4"
        android:drawablePadding="20dp"
        android:onClick="goCarpetas"
        android:text="@string/carpetas"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:drawableEnd="@drawable/icon2"
        android:drawablePadding="20dp"
        android:onClick="goMediciones"
        android:text="@string/mediciones"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>